# aboat-vrgp-adapter

./: CMakeLists.txt  Dockerfile.amd64  Jenkinsfile  LICENSE  README.md
clientWebSocket/: VesselClient  VesselClient.cpp
examples/: package.json  test.js
other/aboat-mockup/: Makefile  aboat-mockup.cpp  connection_messages.hpp
other/examples/: test.js
src/: VesselClient.cpp  adapter_manager.cpp  adapter_manager.hpp  cluon-complete.cpp  cluon-msc  con_metadata.cpp  con_metadata.hpp  connection_messages.odvd  devices.json  endpoint_wrapper.cpp  endpoint_wrapper.hpp  main.cpp  mymessages.hpp  notification_messages.hpp  notification_messages.odvd  opendlv_handler.cpp  opendlv_handler.hpp  receiver  receiver.cpp  sender  sender.cpp  sender_1023  sender_1023.cpp  state.cpp  websocket_client.cpp  websocket_client.hpp
